--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,20 +103,19 @@ body {
   background-size: cover;
 }
 
-
 .animate-auth {
-  animation: slide-up .8s ease-in-out forwards;
+  animation: slide-up 0.8s ease-in-out forwards;
   opacity: 0;
 }
 
 @keyframes slide-up {
-   0% {
+  0% {
     transform: translateX(100px);
     opacity: 0;
-   }
-  
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
