--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,25 @@ body {
 *::-webkit-scrollbar-track {
   background: orange;
 }
+
+.download-progress {
+  animation: download_progress 1s infinite linear;
+}
+
+.download-left-right {
+  transform-origin: 0% 50%;
+}
+
+@keyframes download_progress {
+  0% {
+    transform: translateX(0) scaleX(0);
+  }
+
+  40% {
+    transform: translateX(0) scaleX(0.4);
+  }
+
+  100% {
+    transform: translateX(100%) scaleX(0.5);
+  }
+}
