updating pending and auth logic

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -162,3 +162,53 @@ body {
     transform: translateX(100%) scaleX(0.5);
   }
 }
+
+
+.toast-render {
+  animation: toast_slide_in 0.8s;
+}
+
+
+@keyframes toast_slide_in {
+  0% {
+    transform: translateX(500px);
+    opacity: 0;
+  }
+
+  40% {
+    transform: translateX(0);
+    opacity: 1;
+
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+.toast-hide {
+  animation: toast_slide_out 0.8s;
+}
+
+
+@keyframes toast_slide_out {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+
+  40% {
+    transform: translateX(500px);
+    opacity: 1;
+
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+
+
+
