--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,8 +122,8 @@ body {
 
 .steps-section-bg {
   background:
-    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.8)),
-    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.842)),
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
     url('/social-integrated-person-workspace.jpg') no-repeat top right;
   background-size: cover;
   background-position: center;
@@ -149,12 +149,44 @@ body {
   }
 }
 
+span.svg-circles {
+  position: absolute;
+  width: 7px;
+  height: 6.5px;
+  border: 1px solid #ff450d;
+}
+
+.svg-stroke {
+  color: #ff450d;
+}
+
+.line-svg-stroke {
+  position: absolute;
+  background: #ff450d;
+  width: 3px;
+  height: 20px;
+  border-radius: 4px;
+}
+
+.solution-panel:hover img {
+  transform: scale(1.3);
+  transition: .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.solution-panel:hover .icon-vector {
+  transform: scaleX(1.3);
+  transition: .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 .landing-blur {
   background: linear-gradient(
     86deg,
     var(--white) 27.65%,
     var(--swiper-pagination-color) 159.67%
   );
+}
+
+.navitem-text {
+  font-size: 12px;
 }
 
 @media (max-width: 767px) {
@@ -243,7 +275,11 @@ body {
   /* background:linear-gradient(125deg, #FAAA19 80%, #FF450DCC 100%); */
   background: linear-gradient(45deg, #faaa19 0%, #ff450d 80%);
 }
-
+.footer-title {
+  background: linear-gradient(45deg, #faaa19 0%, #ff450d 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 /* .swiper-slide-active  > figure > figcaption{
   transform: scale(1.2);
 } */
@@ -256,5 +292,15 @@ body {
   .testimonials-circles {
     width: 80px;
     height: 80px;
+  }
+}
+
+.awesome-iframe .bubbleWithLabel #button {
+  bottom: 40px !important;
+}
+
+@media (max-width: 500px) {
+  .awesome-iframe .bubbleWithLabel #button {
+    bottom: 20px !important;
   }
 }
