--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,9 +130,7 @@ body {
   background-attachment: fixed;
 }
 .why-section-bg {
-  background:
-   
-    url('/social-integrated-person-workspace.jpg') no-repeat top right;
+  background: url('/social-integrated-person-workspace.jpg') no-repeat top right;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -177,12 +175,12 @@ span.svg-circles {
 
 .solution-panel:hover img {
   transform: scale(1.3);
-  transition: .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .solution-panel:hover .icon-vector {
   transform: scaleX(1.3);
-  transition: .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .landing-blur {
   background: linear-gradient(
@@ -312,7 +310,10 @@ span.svg-circles {
   }
 }
 
-
 .landing-page-alt {
-background: linear-gradient(45deg, rgba(132, 104, 245, 0.603) , rgba(250, 171, 25, 0.74));
+  background: linear-gradient(
+    45deg,
+    rgba(132, 104, 245, 0.603),
+    rgba(250, 171, 25, 0.74)
+  );
 }
