--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,9 +28,12 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
+  background: linear-gradient(
+      to bottom,
       transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 .landing-page-video-wrapper::after {
@@ -130,7 +133,8 @@ body {
 .why-section-bg {
   background:
     linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
-    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)), url('/pics/1979726285_huge小.jpg') no-repeat top right;
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/pics/1979726285_huge小.jpg') no-repeat top right;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -185,9 +189,11 @@ span.svg-circles {
 }
 
 .landing-blur {
-  background: linear-gradient(86deg,
-      var(--white) 27.65%,
-      var(--swiper-pagination-color) 159.67%);
+  background: linear-gradient(
+    86deg,
+    var(--white) 27.65%,
+    var(--swiper-pagination-color) 159.67%
+  );
 }
 
 .navitem-text {
@@ -302,7 +308,6 @@ span.svg-circles {
   }
 }
 
-
 .awesome-iframe .bubbleWithLabel #button {
   bottom: 40px !important;
 }
@@ -314,6 +319,66 @@ span.svg-circles {
 }
 
 .landing-page-alt {
-  background: rgb(215,200,234);
-  background-image: linear-gradient(180deg, rgba(215, 200, 234, 1) 0%, rgba(252, 220, 165, 1) 57%);
+  background: rgb(215, 200, 234);
+  background-image: linear-gradient(
+    180deg,
+    rgba(215, 200, 234, 1) 0%,
+    rgba(252, 220, 165, 1) 57%
+  );
+}
+
+/* search customize */
+
+.Container {
+  display: grid;
+  align-items: flex-start;
+  grid-template-columns: minmax(min-content, 200px) 1fr;
+  gap: 0.5rem;
+}
+
+.Search {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.Search-header {
+  display: grid;
+  align-items: flex-start;
+  grid-template-columns: 1fr auto auto auto;
+  gap: 0.5rem;
+}
+
+.CurrentRefinements {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.Hit-label {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.Hit-price {
+  color: lightslategray;
+}
+
+.Pagination {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+  margin: 0 auto;
+}
+
+.ais-CurrentRefinements-label {
+  text-transform: capitalize;
+}
+
+.ais-PoweredBy {
+  margin-top: 0.5rem;
+}
+
+.ais-PoweredBy-logo {
+  height: 1rem;
 }
