--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,6 +150,27 @@ body {
   background-attachment: fixed;
 }
 
+.audio-why-section-bg {
+  background:
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/audio_and_video/why-us.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+
+.why-legal-section-bg {
+  background:
+  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+  url('/legal/shutterstock_1775670605.jpg') no-repeat top right;
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+}
+
 /* .home-landing-page-w {
   max-width: max-content !important;
 } */
