--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,15 +130,26 @@ body {
   background-attachment: fixed;
 }
 
-.medical-section-bg {
+.why-medical-section-bg {
   background:
     linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
     linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-    url('/pics/medical.jpg') no-repeat top right;
+    url('/medical_transcription/why-us.jpg') no-repeat top right;
   background-size: contain;
   background-position: center;
   background-attachment: fixed;
 }
+
+.medical-how-it-works {
+  background:
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/medical_transcription/how-it-works.jpg') no-repeat top right;
+  background-size: contain;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 
 .why-section-bg {
   background:
