--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,12 +28,9 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 .landing-page-video-wrapper::after {
@@ -181,6 +178,7 @@ body {
   background-position: center;
   background-attachment: fixed;
 }
+
 .academic-how-it-works {
   background:
     linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
@@ -190,6 +188,7 @@ body {
   background-position: center;
   background-attachment: fixed;
 }
+
 .why-section-bg {
   background:
     linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
@@ -223,12 +222,22 @@ body {
 
 .why-legal-section-bg {
   background:
-  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-  url('/legal/shutterstock_1775670605.jpg') no-repeat top right;
-background-size: cover;
-background-position: center;
-background-attachment: fixed;
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/legal/shutterstock_1775670605.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.legal-how-it-works {
+  background:
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/legal/how-it-works.jpeg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 /* .home-landing-page-w {
@@ -288,11 +297,9 @@ span.svg-circles {
 }
 
 .landing-blur {
-  background: linear-gradient(
-    86deg,
-    var(--white) 27.65%,
-    var(--swiper-pagination-color) 159.67%
-  );
+  background: linear-gradient(86deg,
+      var(--white) 27.65%,
+      var(--swiper-pagination-color) 159.67%);
 }
 
 .navitem-text {
@@ -419,11 +426,9 @@ span.svg-circles {
 
 .landing-page-alt {
   background: rgb(215, 200, 234);
-  background-image: linear-gradient(
-    180deg,
-    rgba(215, 200, 234, 1) 0%,
-    rgba(252, 220, 165, 1) 57%
-  );
+  background-image: linear-gradient(180deg,
+      rgba(215, 200, 234, 1) 0%,
+      rgba(252, 220, 165, 1) 57%);
 }
 
 /* search customize */
