--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -435,6 +435,15 @@ span.svg-circles {
   );
 }
 
+.contact-section-bg {
+  background: rgb(215, 200, 234);
+  background-image: linear-gradient(
+    180deg,
+    #FF450DCC,
+    #FAAA19
+  );
+}
+
 /* search customize */
 
 .Container {
