--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -527,3 +527,52 @@ span.svg-circles {
   background-image: linear-gradient(to right, #FF782D, #8468F5);
   
 }
+/* INDUSTRY PAGES */
+.industry_landing {
+  background: url('/industry/industry-landing.jpg') no-repeat top right;
+  background-size: cover;
+}
+.enterprise_landing {
+  background: 
+  
+  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/enterprise_industry/enterprise_landing.jpg') no-repeat top right;
+  background-size: cover;
+}
+
+/* about us */
+.about-landing {
+  background: rgb(241,88,60);
+background: linear-gradient(180deg, rgba(241,88,60,1) 0%, rgba(247,150,31,1) 64%);
+}
+
+.about-curve {
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+}
+
+.about-curve::before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  transform: translate(85%, 60%);
+  background-color: hsl(216, 21%, 16%);
+}
+
+.about-curve::after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  background-color: #3c31dd;
+  transform: translate(-4%, 40%);
+  z-index: -1;
+}
