--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -522,6 +522,25 @@ span.svg-circles {
   height: 30rem;
 }
 
+.why-legal-industry-bg {
+  background:
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/legal/shutterstock_1775670605.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.why-corporate-industry-bg {
+  background:
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/corporate_industry/young-coleagues.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
 
 .faqs-tab-active-button {
   background-image: linear-gradient(to right, #FF782D, #8468F5);
@@ -537,6 +556,14 @@ span.svg-circles {
   
   linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
   linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/enterprise_industry/enterprise_landing.jpg') no-repeat top right;
+  background-size: cover;
+}
+
+.legal_landing {
+  background: 
+  
+  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/legal_industry/legal_landing.webp') no-repeat top right;
   background-size: cover;
 }
 
