--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -576,6 +576,28 @@ background-attachment: fixed;
   linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/media_industry/film-studio.jpg') no-repeat top right;
   background-size: cover;
 }
+.education_landing {
+  background: 
+  
+  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/education_industry/bg-landing.jpg') no-repeat top right;
+  background-size: cover;
+}
+
+.government_landing {
+  background: 
+  
+  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/government_industry/bg-landing.jpg') no-repeat top right;
+  background-size: cover;
+}
+.health_landing {
+  background: 
+  
+  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/healthcare_industry/doctor-exam.jpg') no-repeat top right;
+  background-size: cover;
+}
 
 .legal_landing {
   background: 
@@ -594,8 +616,33 @@ background-attachment: fixed;
   background-size: cover;
   height: 30rem;
 }
-
-
+.why-government-industry-bg {
+  background:
+  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+  url('/government_industry/channel-ng.jpeg') no-repeat top right;
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+}
+.why-education-industry-bg {
+  background:
+  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+  url('/education_industry/empty-classroom-with-modern-chairs-tables-generated-by-ai.jpg') no-repeat top right;
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+}
+.why-health-industry-bg {
+  background:
+  linear-gradient(to bottom, transparent, rgba(79, 77, 185, 0.87)),
+  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+  url('/healthcare_industry/bg-landing.jpg') no-repeat top right;
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+}
 
 /* about us */
 .about-landing {
