--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -522,7 +522,6 @@ span.svg-circles {
   height: 30rem;
 }
 
-
 .why-legal-industry-bg {
   background:
     linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
@@ -542,112 +541,130 @@ span.svg-circles {
   background-position: center;
   background-attachment: fixed;
 }
+
 .why-media-industry-bg {
   background:
-  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-  url('/media_industry/musician_playing.jpg') no-repeat top right;
-background-size: cover;
-background-position: center;
-background-attachment: fixed;
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/media_industry/musician_playing.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .faqs-tab-active-button {
-  background-image: linear-gradient(to right, #FF782D, #8468F5);
-  
+  background-image: linear-gradient(to right, #ff782d, #8468f5);
 }
+
 /* INDUSTRY PAGES */
 .industry_landing {
   background: url('/industry/industry-landing.jpg') no-repeat top right;
   background-size: cover;
 }
+
 .enterprise_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/enterprise_industry/enterprise_landing.jpg') no-repeat top right;
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),
+    url('/enterprise_industry/enterprise_landing.jpg') no-repeat top right;
   background-size: cover;
 }
 
 .media_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/media_industry/film-studio.jpg') no-repeat top right;
-  background-size: cover;
-}
-.education_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/education_industry/bg-landing.jpg') no-repeat top right;
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),
+    url('/media_industry/film-studio.jpg') no-repeat top right;
   background-size: cover;
 }
 
+.education_landing {
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),
+    url('/education_industry/bg-landing.jpg') no-repeat;
+  background-size: cover;
+  background-position: bottom right;
+}
+
 .government_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/government_industry/bg-landing.jpg') no-repeat top right;
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),
+    url('/government_industry/bg-landing.jpg') no-repeat top right;
   background-size: cover;
 }
+
 .health_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/healthcare_industry/doctor-exam.jpg') no-repeat top right;
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),
+    url('/healthcare_industry/doctor-exam.jpg') no-repeat top right;
   background-size: cover;
 }
 
 .legal_landing {
-  background: 
-  
-  linear-gradient(to left, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.329)),url('/legal_industry/legal_landing.webp') no-repeat top right;
+  background:
+    linear-gradient(to left, transparent, rgba(255, 255, 255, 0.801) 100%),
+    url('/legal_industry/landing.jpg') no-repeat top right;
   background-size: cover;
+  background-position: top right;
 }
 
 .why_media_industry_top {
-  background: rgb(241,88,60);
-  background: linear-gradient(180deg, rgba(241,88,60,1) 0%, rgba(247,150,31,1) 64%);
+  background: rgb(241, 88, 60);
+  background: linear-gradient(
+    180deg,
+    rgba(241, 88, 60, 1) 0%,
+    rgba(247, 150, 31, 1) 64%
+  );
 }
+
 .media_industry_pattern {
   background: url('/media_industry/top-pattern.svg') no-repeat;
   background-size: cover;
   height: 30rem;
 }
+
 .why-government-industry-bg {
   background:
-  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-  url('/government_industry/channel-ng.jpeg') no-repeat top right;
-background-size: cover;
-background-position: center;
-background-attachment: fixed;
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/government_industry/channel-ng.jpeg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
+
 .why-education-industry-bg {
   background:
-  linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-  url('/education_industry/empty-classroom-with-modern-chairs-tables-generated-by-ai.jpg') no-repeat top right;
-background-size: cover;
-background-position: center;
-background-attachment: fixed;
+    linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/education_industry/empty-classroom-with-modern-chairs-tables-generated-by-ai.jpg')
+      no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
+
 .why-health-industry-bg {
   background:
-  linear-gradient(to bottom, transparent, rgba(79, 77, 185, 0.87)),
-  linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
-  url('/healthcare_industry/bg-landing.jpg') no-repeat top right;
-background-size: cover;
-background-position: center;
-background-attachment: fixed;
+    linear-gradient(to bottom, transparent, rgba(79, 77, 185, 0.87)),
+    linear-gradient(to top, transparent, rgba(255, 252, 252, 0.952)),
+    url('/healthcare_industry/bg-landing.jpg') no-repeat top right;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 /* about us */
 .about-landing {
-  background: rgb(241,88,60);
-background: linear-gradient(180deg, rgba(241,88,60,1) 0%, rgba(247,150,31,1) 64%);
+  background: rgb(241, 88, 60);
+  background: linear-gradient(
+    180deg,
+    rgba(241, 88, 60, 1) 0%,
+    rgba(247, 150, 31, 1) 64%
+  );
 }
 
 .about-curve {
